--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
      "main": "index.js",
      "scripts": {
           "prisma-generate": "dotenv -e production.env -- npx prisma generate",
-          "dev-start": "cross-env NODE_ENV=development  npx nodemon index.ts"
+          "dev-start": "cross-env NODE_ENV=development  npx nodemon src/index.ts"
      },
      "author": "",
      "license": "ISC",
